# SCRAM

./: .codeclimate.yml  .coveragerc  .editorconfig  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTORS.txt  Dockerfile  LICENSE  Makefile  PodmanNotes  README.rst  SCRAM_PodmanNetworkNotes  ci.yml  compose.override.local.yml  compose.override.production.yml  compose.yml  coverage.coverage  db.sqlite3  docker-compose.yml  envs.tar  license.txt  load_database  local.yml  manage.py  mkdocs.yml  playbook.yml  production.override.yml  production.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.ci-scripts/: coverage.sh  create_user.py  flake8_before.sh  flake8_run.sh  pull_images.sh  push_images.sh  pytest_before.sh  pytest_run.sh
.envs/.local/: .celery  .celery-primary  .celery-secondary  .django  .django-primary  .django-secondary  .postgres  .translator  .translator-primary  .translator-secondary
.envs/.production/: .django  .postgres  .translator
.github/: dependabot.yml
.github/workflows/: behave.yml  behave_next_python.yml  code-quality.yml  code_quality.yml  coverage-finish.yml  dependency-scanning.yml  django.yml  docs.yml  flake8.yml  future_pytest.yml  lint.yml  pytest.yml  pytest_next_python.yml  ruff.yml  sast.yml  scheduler.yml  scripts.yml  static.yml  translator.yml  type-check.yml
ansible/: django.env.j2  inventory  nginx-local.conf.j2  nginx.conf.j2  playbook.yml  postgres.env.j2  traefik.yml.j2
ansible/inventory/: inventory.yml
config/: __init__.py  api_router.py  asgi.py  celery_app.py  consumers.py  routing.py  urls.py  websocket.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py  test.py
django/: pyproject.toml
django/requirements/: base.txt  local.txt
django/src/: manage.py
django/src/config/: __init__.py  api_router.py  asgi.py  consumers.py  routing.py  urls.py  wsgi.py
django/src/config/settings/: base.py  local.py  production.py  test.py
django/src/scram/: __init__.py
django/src/scram/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
django/src/scram/local_auth/: __init__.py  urls.py
django/src/scram/route_manager/: __init__.py  admin.py  apps.py  authentication_backends.py  context_processors.py  models.py  views.py
django/src/scram/route_manager/api/: __init__.py  exceptions.py  serializers.py  views.py
django/src/scram/route_manager/migrations/: 0002_ipaddress_uuid.py  0004_actiontype.py  0005_entry.py  0006_history.py  0007_history_expiration.py  0008_default_block_actiontype.py  0009_expiration_to_datetime.py  0010_actiontype_helptext.py  0012_unique_entries.py  0013_accept_cidrs.py  0015_entry_is_active.py  0016_auto_20211202_1933.py  0018_auto_20220702_0203.py  0019_auto_20220708_1945.py  0020_historicalactiontype_historicalentry_historicalignoreentry.py  0021_auto_20220929_2047.py  0023_client.py  0024_alter_client_is_authorized.py  0025_rename_uuid_client_uuid.py  0029_alter_websocketmessage_msg_data_route_field.py  0030_alter_entry_comment_alter_entry_expiration_reason_and_more.py  0032_entry_originating_scram_instance_and_more.py  0033_fix_broken_entry_model_historical_defaults.py  0034_alter_entry_originating_scram_instance_and_more.py  0035_alter_client_uuid.py  0037_unique_client_uuid.py  0038_merge_20260310_2137.py
django/src/scram/route_manager/tests/: __init__.py  functional_tests.py  test_admin.py  test_api.py  test_authorization.py  test_autocreate_admin.py  test_pagination.py  test_process_updates.py  test_views.py  test_websockets.py
django/src/scram/route_manager/tests/acceptance/: environment.py
django/src/scram/route_manager/tests/acceptance/features/: add_automated_block_entry.feature  remove_ip.feature  search.feature
django/src/scram/route_manager/tests/acceptance/steps/: translator.py
django/src/scram/route_manager/tests/integration/features/: multi_instance_sync.feature
django/src/scram/route_manager/tests/integration/steps/: common.py  ip.py  multi_instance.py
django/src/scram/route_manager/tests/test_common/: __init__.py  steps_common.py  steps_ip.py
django/src/scram/shared/: __init__.py  shared_code.py
django/src/scram/templates/: 403.html
django/src/scram/templates/route_manager/: entry_detail.html  entry_list.html
django/src/scram/templates/users/: user_detail.html  user_form.html
django/src/scram/users/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
django/src/scram/users/api/: serializers.py
django/src/scram/users/tests/: __init__.py  factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_models.py  test_urls.py  test_views.py
django/src/scram/utils/: __init__.py  context_processors.py
docs/: .#summary.md  Makefile  README.md  __init__.py  conf.py  cookiecutter.md  decisions.md  dependencies.md  development_guide.md  document_env_vars.py  environment_variables.md  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
gobgp_config/: gobgp.toml
requirements/: base.txt  code_quality.txt  debug.txt  docs.txt  local.txt  production.txt
route_manager/: apps.py  tests.py  views.py
scheduler/: pyproject.toml
scheduler/src/scheduler/: __init__.py  app.py  settings.py  tasks.py
scheduler/tests/: __init__.py  conftest.py  test_app.py  test_settings.py  test_tasks.py
scram/: __init__.py  asgi.py  conftest.py  functional_tests.py  settings.py  urls.py  wsgi.py
scripts/: extract_env_vars.py  pyproject.toml
scripts/src/docs/: environment_variables.md
scripts/src/scripts/: extract_env_vars.py
scripts/tests/: test_extract_env_vars.py
translator/: add_path.py  exceptions.py  gobgp.py  pyproject.toml  requirements.txt  shared.py  test_file_thingy.py  translator.py
translator/requirements/: base.txt  local.txt
translator/src/translator/: __init__.py  exceptions.py  gobgp.py  settings.py  shared.py  translator.py
translator/tests/acceptance/: environment.py
translator/tests/acceptance/features/: 00_clean_slate.feature  bgp.feature  clean_slate.feature
translator/tests/acceptance/steps/: actions.py
zeek/etc/: node.cfg  (+1 more)
(+160 files in other folders)
