[project]
name = "SCRAM"
version = "1.5.1"

# ===== ruff ====
[tool.ruff]
exclude = [
  "migrations",
]

line-length = 119
preview = true
target-version = 'py312'

[tool.ruff.lint]
ignore = [
  "COM812", # handled by the formatter
  "DOC501", # add possible exceptions to the docstring (TODO)
  "ISC001", # handled by the formatter
  "RUF012", # need more widespread typing
  "SIM102", # use a single `if` statement instead of nested `if` statements
  "SIM108", # use ternary operator instead of `if`-`else`-block
  "PERF401", # list comprehensions are harder to read in our opinion and not worth the performance gain
  "PERF403", # dict comprehensions are harder to read in our opinion and not worth the performance gain
]
select = [
  "A", # builtins
  "ASYNC", # async
  "B", # bugbear
  "BLE", # blind-except
  "C4", # comprehensions
  "C90", # complexity
  "COM", # commas
  "D", # pydocstyle
  "DJ", # django
  "DOC", # pydoclint
  "DTZ", # datetimez
  "E", # pycodestyle
  "EM", # errmsg
  "ERA", # eradicate
  "F", # pyflakes
  "FBT", # boolean-trap
  "FLY", # flynt
  "G", # logging-format
  "I", # isort
  "ICN", # import-conventions
  "ISC", # implicit-str-concat
  "LOG", # logging
  "N", # pep8-naming
  "PERF", # perflint
  "PIE", # pie
  "PL", # pylint
  "PTH", # use-pathlib
  "Q", # quotes
  "RET", # return
  "RSE", # raise
  "RUF", # Ruff
  "S", # bandit
  "SIM", # simplify
  "SLF", # self
  "SLOT", # slots
  "T20", # print
  "TRY", # tryceratops
  "UP", # pyupgrade
]

[tool.ruff.lint.mccabe]
max-complexity = 7 # our current code adheres to this without too much effort

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "C901", # function is too complex (applies to test helpers)
  "DOC201", # documenting return values
  "DOC402", # documenting yield values
  "FBT002", # boolean default argument in function definition
  "PLR6301", # could be a static method
  "S101", # use of assert
  "S106", # hardcoded password
  "PLR2004", # magic value used in comparison
]
"**/views.py" = [
  "DOC201", # documenting return values; it's fairly obvious in a View
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.workspace]
members = ["django", "scheduler", "translator"]

[dependency-groups]
dev = [
  "ruff~=0.14.14",
]
