[project]
name = "scheduler"
dependencies = [
  "celery>=5.6.2",
  "celery-types>=0.24.0",
  "flower>=2.0.1",
  "httpx>=0.28.1",
  "pydantic-settings>=2.12.0",
  "redis>=7.1.0",
]
requires-python = ">=3.14.2"
version = "0.1.0"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
