[project]
name = "scripts"
dependencies = [
  "pytest>=9.0.2",
  "pytest-cov>=4.1.0",
]
requires-python = ">=3.12.9"
version = "0.1.0"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# disable the django stuff that gets inherited from the main project and enable coverage.
addopts = [
  "-p",
  "no:sugar",
  "-p",
  "no:django",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml:coverage.xml"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 50

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLC0415",
]
